Completed Loves of Plain Bread Task

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -2233,7 +2233,7 @@
                     </ul>
                   <hr>
                   <p>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Cooking Training</span><span class="orange">, Return to the Cooking trainer with 10 bread doughs</span> <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Cooking Training</span><span class="orange">, Return to the Cooking trainer with 10 Cooked Spider Legs</span> <br>
                     <span class="light-green">Spider legs</span> can come from <span class="light-red">Spiders</span> <img class="monster-img" src="Images/Valinor/Monsters/Spider.png" alt="Spider"> out side of the castle, or in the basement from the <span class="light-red">Dredge Spiders</span>. <img class="monster-img" src="Images/Valinor/Monsters/Dredge_Spider.png" alt="Dredge Spider"> The Dredge Spiders are the easier ones if you are haveing isusse killing.
                     Once you have 10 or more Spider Legs head to the Tavern to begin roasting your spider legs. Roasting is a very easy thing to do you click on the spider leg <img src="Images/Valinor/Food/Spider_Leg.png" alt="Spider Leg">
                     Then click on the oven. <img class="monster-img" src="Images/Valinor/Items/Items/Oven.png" alt="Oven"> At a low level you will fail a few time before you cook all 10 required. When you succeed you will have a <span class="light-green">Cooked Spider Leg</span>. <img src="Images/Valinor/Food/Cooked_Spider_Leg.png" alt="Cooked Spider Leg"> You can cook them one at a time or in bunches of 5. This has
@@ -2245,7 +2245,17 @@
                       <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,440</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
-                 
+                  <p class="clearfix">
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Cooking Training</span><span class="orange">, Return to the Cooking trainer with 10 loaves of plain bread</span> <br>
+                    The <span>Cooking Trainer</span> now has tasked you to make 10 <span class="light-green">loaves of plain bread</span> for the guards lunch.
+                    This task is just a mix of the first task and second task. You need to make 10 bread doughs, then take them to the oven and cook them just like you did with the Spider Legs. <br>
+                    <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough</span><span class="green"> Loaves of Plain Bread </span> <span class="orange">to complete the quest</span>. Return to the <span class="light-red">Cooking Trainer</span> to complete your task and start a new one. 
+                  </p> 
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2,160</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr> 
                   <p class="mt-4 py-3 text-center quest-complete">
                   Quest Complete
                 </p>
