Updated Patch Notes

--- a/index.html
+++ b/index.html
@@ -88,6 +88,117 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date" >FujiQ 11/30/2020</small> <br>
+              <p>
+                This is a patch to address some issues that have appeared up since Friday's update.
+              </p>
+              <ul>
+                <li>Mobs which teleport (pounce) will no longer stack on top of players</li>
+                <li>Axe of many Souls STR correction (should have been req 100 STR)</li>
+                <li>Totem of Sabal's Children will become no drop for the player who first uses it to summon a creature</li>
+                <li>Map fix for bowing across lava</li>
+                <li>Adjust on boss spawning mechanism for Dunkelklinge based on live drop rates</li>
+                <li>Adjust for drops from horned Archer/Berserker/Elite Fighter/Deceiver and Cyclops</li>
+                <li>Bonecrusher can be cannibalized</li>
+                <li>Adjusted Hammer of Lightning Special</li>
+                <li>Adjusted to hit values of Bolts and Arrows</li>
+              </ul>
+            </article>  
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date" >FujiQ 11/27/2020</small> <br>
+              <p>
+                <strong>Neutral Faction Dungeon Revamp</strong> <br>
+                below Hell is the horned one island, a breeding pit of warlike creatures commissioned by the goddess Sabal. The horned creatures, however,
+                 refuse to obey the goddess's summons to war. Instead they feast on souls that have lost their way to the spawn gates. Aide the goddess of Chaos and slay these creatures;
+                 perhaps you have the courage to take on their scalded leader, Dunkeklinge.
+              </p>
+              <strong>===Items===</strong>
+              <ul>
+                <li>Brev's Measuring Cup fixed (applies bonus upon equipping)</li>
+                <li>Heartwood shield fixed (applies bonus upon equipping)</li>
+                <li>2 new themed low level sets dropping on mainlands</li>
+                <li>Adjustment to Azure, Valekar's, Black, Holy armor sets</li>
+                <li>Adjusted weapon stats on hell cleaver, famine bringer, talazar's minion, truestrike, hammer of lighting, ryonkah's sworld</li>
+                <li>Adjusted specials for hell cleaver, hell's bane, talazar's minion, fireseeker</li>
+                <li>Sword of Ryonkah now has a special</li>
+                <li>Tarvan/Hanvik/Lonvia heads now tell you who's head they are when they are clicked</li>
+                <li>Injured Minotaur quest scrolls now dropping from minos and other mainland mobs</li>
+                <li>Rebalance of all ranged (bow/xbow/thrown) and unarmed weapons</li>
+                <li>Dragon hide Quiver has more slots</li>
+                <li>Jewelry case now holds hypnotic chain</li>
+                <li>Idol of arna can go into rune bag</li>
+                <li>A few expansion items were dropping where they should not have been</li>
+                <li>Leather leggings now black that should be black</li>
+                <li>Grimoire of knightcaster giving +50 HP (Fixed to match tooltip)</li>
+                <li>Neptune's helment typo</li>
+                <li>Crypt gaurdian typo</li>
+                <li>Tyrian silk cape, cap, and shoes tooltip showing additional health</li>
+                <li>Shepherd's staff fits into weapons cab</li>
+                <li>Typo on MoS special text</li>
+                <li>Flame reaver shield, tunic, helm missing/incorrect HP tooltip</li>
+                <li>Cloak of frostbane missing tooltip</li>
+                <li>Scythe of ulthien typo</li>
+                <li>Totem of Burst won't be added when you have move speed equipment on</li>
+                <li>Updated carpentry toolset to show added skill bonus (10)</li>
+                <li>Banished, Briarwood, Wretched set requirement adjustments</li>
+                <li>Gorgor's Precious updated to reflect boss name, now Gorgar's Precious</li>
+                <li>Heilige Lance has been added back to the drop tables at rare chances (no, do not ask me what drops it)</li>
+              </ul>
+              <strong>===Quests===</strong>
+              <ul>
+                <li>Bograhk Dargark (Krog Warrior Trainer) now successfully completing on the final stage (turn in for platemail)</li>
+                <li>Typo "words words" in neutral faction quest dialogue</li>
+                <li>Hammerfist Mine trapdoor/ladder can be exited but not re-entered unless ou have completed the quest.</li>
+                <li>Minotaur Dungeon teleporter fix (once you had completed the quest to kill Elites, teleporters acted like solid invisible objects)</li>
+                <li>Lloyd Dogen and accompanying cave now accessible near Parian instead of heck the way up death valley</li>
+                <li>Halflah/Haflah typos and fix for quest</li>
+                <li>Franklin Anders now says something when you have cure and on stage to give to him</li>
+                <li>Legacy lumberjack trainer quest typo "appriciation"</li>
+                <li>Quest typo "sonds and daughters" neutral faction quest</li>
+                <li>Ivogur's mine quest fix up (please retry if you were stuck and could not complete on the crate stage)</li>
+                <li>Quest Log now supports legacy archery trainer quest (Klaresh is starting npc)</li>
+                <li>Killing Meklor will now advance you to the next part of the quest (Valekar quest given from NPC Kongodo</li>
+                <li>Sea Creatures quests (DTM, Orcas, Squids and the like) should be working now for players killing while on a boat</li>
+              </ul>
+              <strong>===Map===</strong>
+              <ul>
+                <li>Large tsunami off the coast of GDI has sunk some beach real estate</li>
+                <li>Teleport at cave on GDI works a bit differently to avoid frustration, endless looping, and death</li>
+                <li>GDI docks no longer send you to spawn gate when you log</li>
+                <li>Some bushes have been whacked on GDI</li>
+                <li>All parts of Mino and BFD dungeons now checked when player logs in</li>
+                <li>Syldural dwelling set to evil</li>
+              </ul>
+              <strong>===Spells===</strong>
+              <ul>
+                <li>Wrath of Malax typo (daamge instead of damage)</li>
+                <li>Repair Iron/Recharge typo (wit instead of with)</li>
+                <li>Fortify now cannot be cast on mobs, just other players and followers</li>
+              </ul>
+              <strong>===Misc===</strong>
+              <ul>
+                <li>Typo in Tserith offering (sacerfice instead of sacrifice)</li>
+                <li>Fix typo in prison system message on gold reward for Hanvik/Ionvia</li>
+              </ul>
+              <strong>===NPCs===</strong>
+              <ul>
+                <li>Guards at outposts should be behaving as neutral, if you find more, please report in bugs channel</li>
+                <li>Additional guards at Ringhaven Citadel spawn gate</li>
+                <li>Guardian of Kuthos stats and spawn adjusted</li>
+                <li>Spawns have been redone/adjusted in the valleys NE of Parian</li>
+                <li>Adjustment to Ghost of Lotor I and Icebane Coldstone</li>
+                <li>Nithhogr drop tables updated</li>
+                <li>Blue Revenge gear has chance to drop outside of boss drops</li>
+                <li>Nithhogr now has a corpse</li>
+                <li>Typo in Kezemede Maat's announce "I hunnger"</li>
+                <li>Wizard of Insight back in Josody</li>
+                <li>Several creatures which did not have inventory now show inventory (SoC, ToF, and TR mobs, in particular</li>
+                <li>Removed a few creatures from training tables</li>
+              </ul>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date" >FujiQ 10/18/2020</small> <br>
               <ul>
                 <li>Uploaded PVP server adjust to first aid healing (will use a stasis/pause instead of timer). <br>PVE server will continue to use timers in lieu of stasis </li>
