New images, and Grab bag for Dec

--- a/index.html
+++ b/index.html
@@ -744,6 +744,22 @@
                       </div>
                     </div>
                   </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading accordion-border">
+                      <h5 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse8">
+                        December 2020</a>
+                      </h5>
+                    </div>
+                    <div id="collapse8" class="panel-collapse collapse">
+                      <div class="panel-body accordion-border">
+                          <ul class="light-grey-text">
+                              <li>1 Orb Reset</li>
+                              <li>1 Race/Gender Change</li>
+                          </ul>
+                      </div>
+                    </div>
+                  </div>
               </div>
             
             <div class="line"></div>
