Added 2 New Quest

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -88,6 +88,12 @@
                         <li>
                           <a href="#hellHathNoFury">Hell hath No Fury</a>
                         </li>                        
+                        <li>
+                          <a href="#theAlchemistsApprentice">The Alchemist's Apprentice</a>
+                        </li>
+                        <li>
+                          <a href="#veratti">Veratti</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -199,7 +205,7 @@
                   </div>                  
                 </div>
                 <div class="card-body">
-                  <div class="card-body ol-border">
+                  <div class="card-body">
                     <ol>
                       <li class="li-border">1. Duke Randolf</li>
                       <li class="li-border">2. Kumba Northern</li>
@@ -212,10 +218,10 @@
                       <li class="li-border">9. Lorlee Eclain</li>
                       <li class="li-border">10. Captain of the Guard</li>
                       <li class="li-border">11. Curtis Leabu</li>
-                      <li class="li-border">12. A Strange Looking Man</li>
-                      <li class="li-border">13. Davey Logan</li>
-                      <li class="li-border">14. Timothy Jager</li>
-                      <li class="li-border">15. A Young Maid</li>
+                      <li class="li-border">12. Davey Logan</li>
+                      <li class="li-border">13. Timothy Jager</li>
+                      <li class="li-border">14. A Young Maid</li>
+                      <li class="li-border">15. A Strange Looking Man</li>
                     </ol>
                   </div>
                 </div>
@@ -1504,6 +1510,164 @@
                 </div>
                 <!-- End of Hell hath no Fury  -->
                 <div class="line"></div>
+                <!-- Start of The Alchemist Apprentice  -->
+                <div class="card bg-main half-width mb-5">
+                  <div class="card-header">
+                    <h2 id="theAlchemistsApprentice" class="anchor text-center">The Alchemist's Apprentice</h2>
+                  </div>
+                  <div>
+                    <div class="card-body">
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>Difficulty</th>
+                            <th>Skills</th>
+                            <th>Items</th>                            
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>Apprentice</td>
+                            <td>Combat</td>
+                            <td>Blue Topaz <br>
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Items/Blue_Topaz.png" alt="Blue Topaz"></td>
+                      </table>
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>NPC Quest Start</th>
+                            <th>Monster</th>
+                            <th>Reward</th>
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>
+                              Alchemist Baki
+                            </td>
+                            <td>
+                              Triddle (lvl 1)
+                            </td> 
+                            <td>
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Items/Potion_of_Minor_Healing.png" alt="Potion of Minor Healing">
+                            </td>                        
+                      </table>
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>Quest Stages</th>
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>1</td>
+                          </tr>
+                                               
+                      </table>
+                      <hr>
+                      <p class="clearfix">
+                        <img class="npc-img" src="Images/Valinor/NPCS/Alchemist_Baki.png" alt="Alchemist Baki">
+                        Speak to <span class="light-red">The Alchemist Baki</span>, he is in need of some gemstones to help with his potion making.
+                        bring him 2 blue topaz, and in return will give you a healing potion in return.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> The Alchemist's Apprentice</span><span class="orange">, Bring 2 Blue Topaz to Alchemist Baki in Valinor.</span>
+                      </p>
+                      <p>
+                        This is a very easy task go out side the castle walls and kill <span class="red">Triddles</span> <img class="monster-img" src="Images/Valinor/Monsters/Triddle.png" alt=""> untill you have 2 <span class="light-green">Blue Topaz</span>, <img src="Images/Valinor/Items/Items/Blue_Topaz.png" alt="Blue Topaz"> you can buy them if you see them in the store. <br>
+                        <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enougth</span><span class="green"> Gem </span><span class="orange">to complete the quest.</span> <br>
+                        Speak to <span class="light-red">The Alchemist Baki</span> again to be rewared. He says to bring him more Blue Topaz, if you wish.
+                          <hr>  
+                          <ul>
+                            <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Potion of Minor Healing</span></li>
+                          </ul>
+                          <hr>
+                        Alchemist Baki will continue to accept Blue Topaz in exchange for healing potions.  
+                        </P>
+
+                        <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End of The Alchemists Apprentice  -->
+                <div class="line"></div>
+                <!-- Start of Veratti  -->
+                <div class="card bg-main half-width mb-5">
+                  <div class="card-header">
+                    <h2 id="veratti" class="anchor text-center">Veratti</h2>
+                  </div>
+                  <div>
+                    <div class="card-body">
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>Difficulty</th>
+                            <th>Skills</th>
+                            <th>Items</th>                            
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>Apprentice</td>
+                            <td>Combat</td>
+                            <td>Blue Topaz <br>
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Items/Ant_Leg.png" alt="Ant Leg"></td>
+                      </table>
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>NPC Quest Start</th>
+                            <th>Monster</th>
+                            <th>Reward</th>
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>
+                              Alchemist Baki
+                            </td>
+                            <td>
+                              Fire Ant (lvl 8)
+                            </td> 
+                            <td>
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Items/Undead_Cocktail.png" alt="Undead Cocktail">
+                            </td>                        
+                      </table>
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>Quest Stages</th>
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>1</td>
+                          </tr>
+                                               
+                      </table>
+                      <hr>
+                      <p class="clearfix">
+                        <img class="npc-img" src="Images/Valinor/NPCS/Veratti.png" alt="Veratti">
+                        Speak to <span class="light-red">Veratti</span>, he ask you to go north past the bridge and then along the lake to the Fire Ant mounds. He ask you to bring back 10 of their legs for his mixtures
+                        This potion will help you in your struggles against the numerous undead that haunt the area. 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Veratti</span><span class="orange">, Bring 10 Ant Legs to Veratti stationed at an outpost sourth of Valinor Island swamp.</span>
+                      </p>
+                      <p>
+                        This task can be a hard one; The <span class="red">Fire Ants</span> <img class="monster-img" src="Images/Valinor/Monsters/Fire_Ant.png" alt=""> are lvl 8 and always attack in a group if not carefull you can be over ran by them. Kill them untill you have 10 <span class="light-green">Ant Legs</span>, <img src="Images/Valinor/Items/Items/Ant_Leg.png" alt="Ant Leg"> then return to Veratti for your reward.  <br>
+                        <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enougth</span><span class="green"> Ant Leg </span><span class="orange">to complete the quest.</span> <br>
+                        Speak to <span class="light-red">Veratti</span> again to be rewared. He say to bring another 10 ant legs; he will provide you with antoher potion.
+                          <hr>  
+                          <ul>
+                            <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Undead Cocktail</span></li>
+                          </ul>
+                          <hr>
+ 
+                        </P>
+
+                        <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End of The Alchemists Apprentice  -->
+                <div class="line"></div>
               </div>           
               <h2>Weapon Trainers</h2>
               <!-- Start of Large Blades Trainer  -->
@@ -1552,12 +1716,12 @@
                       <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Large Blades</span><span class="orange">, Venture forth and gain experience with your sword.</span>
                       <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 500 exp in Large Blades</span> <span class="ml-2 green">10 Gold</span></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 700 exp in Large Blades</span> <span class="ml-2 green">Poorly Weighted Claymore</span></li></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 900 exp in Large Blades</span> <span class="ml-2 green">25 Gold</span></li></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 1100 exp in Large Blades</span> <span class="ml-2 green">50 Gold</span></li></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 1500 exp in Large Blades</span> <span class="ml-2 green">100 Gold</span></li></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 3000 exp in Large Blades</span> <span class="ml-2 green">150 Gold</span></li></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 5000 exp in Large Blades</span> <span class="ml-2 green">Sword of the Island Guard</span></li></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2">Second task Gain 700 exp in Large Blades</span> <span class="ml-2 green">Poorly Weighted Claymore</span></li></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2">Third task Gain 900 exp in Large Blades</span> <span class="ml-2 green">25 Gold</span></li></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2">Fourth task Gain 1100 exp in Large Blades</span> <span class="ml-2 green">50 Gold</span></li></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2">Fifth task Gain 1500 exp in Large Blades</span> <span class="ml-2 green">100 Gold</span></li></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2">Sixth task Gain 3000 exp in Large Blades</span> <span class="ml-2 green">150 Gold</span></li></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2">Seventh task Gain 5000 exp in Large Blades</span> <span class="ml-2 green">Sword of the Island Guard</span></li></li>
                         </ul>
                     </p>
                     <p>
