Added Nature Mage Trainer

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -129,6 +129,23 @@
                   </ul>
               </li>
               <li>
+                <a href="#mageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Mage Trainers</a>
+                <ul class="collapse list-unstyled" id="mageSubmenu">
+                    <li>
+                        <a href="#natureMageTrainer">Nature Mage Trainer</a>
+                    </li>
+                    <li>
+                        <a href="#bodyMageTrainer">Body Mage Trainer</a>
+                    </li>
+                    <li>
+                        <a href="#mindMageTrainer">Mind Mage Trainer</a>
+                    </li>
+                    <li>
+                        <a href="#soulMageTrainer">Soul Mage Trainer</a>
+                    </li>
+                </ul>
+            </li>
+              <li>
                 <a href="#tradeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">TradeSkill Trainers</a>
                 <ul class="collapse list-unstyled" id="tradeSubmenu">
                     <li>
@@ -2329,6 +2346,92 @@
               </div>
             </div>
             <!-- End of Thrown Weapons Trainer  -->
+            <div class="line"></div>
+            <!-- Start of Nature Mage Trainer  -->
+            <div class="card bg-main half-width mb-5">
+              <div class="card-header">
+                <h2 id="natureMageTrainer" class="anchor text-center">Nature Spells</h2>
+              </div>
+              <div>
+                <div class="card-body">
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>Difficulty</th>
+                        <th>Skills</th>
+                      </tr>                              
+                      </thead>    
+                      <tr>
+                        <td>Apprentice</td>
+                        <td>Combat</td>
+                      </tr>
+                  </table>
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>NPC Quest Start</th>
+                        <th>Reward</th>
+                      </thead>    
+                      </tr>
+                      <tr>
+                        <td>Nature Mage Trainer</td> 
+                        <td>
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons" alt="Simple Wooden Wand" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Weapons/Simple_String_Sling_Stats.png' alt='Simple String Sling Stats'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons" alt="Sash of the Rodent" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Weapons/Braided_Sling_Stats.png' alt='Braided Sling Stats'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons" alt="Dull Gemed Staff" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Weapons/Shepherds_Sling_Stats.png' alt='Shepherds Sling Stats'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons" alt="Amulet of Minor Nature" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Weapons/Pebbles_Stats.png' alt='Pebbles Stats'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons" alt="Rune of Nature" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Weapons/Pebbles_Stats.png' alt='Pebbles Stats'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Gold_335.png' alt='Gold 335'>">
+                        </td>                        
+                  </table>
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>Quest Stages</th>
+                      </tr>
+                    </thead>
+                    <tr>
+                      <td>7</td>
+                    </tr>
+                  </table>
+                  <hr>
+                  <p class="clearfix">
+                    <img class="npc-img" src="Images/Valinor/NPCS/Nature_Mage_Trainer.png"alt="Nature Mage Trainer">
+                    Speak to <span class="light-red">Nature Mage Trainer</span>, He will give you a <span class="light-green">Simple Wooden Wand</span> to complete the task to gain experience by slaying beasts and foul creatures, then return to be rewarded.
+                    <hr>  
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Simple Wooden Wand / Rune of Nature</span></li>                            
+                        </ul>
+                        <hr>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Nature spells</span><span class="orange">, Venture forth and gain experience with your crossbow.</span>
+                    <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 500 exp in Thrown Weapons</span> <span class="ml-2 green">10 Gold / Rune of Nature</span></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Second task Gain 700 exp in Thrown Weapons</span> <span class="ml-2 green">Sash of the Rodent / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Third task Gain 900 exp in Thrown Weapons</span> <span class="ml-2 green">25 Gold / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fourth task Gain 1100 exp in Thrown Weapons</span> <span class="ml-2 green">50 Gold / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fifth task Gain 1500 exp in Thrown Weapons</span> <span class="ml-2 green">100 Gold / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Sixth task Gain 3000 exp in Thrown Weapons</span> <span class="ml-2 green">Dull Gemed Staff / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Seventh task Gain 5000 exp in Thrown Weapons</span> <span class="ml-2 green">Amulet of Minor Nature / Rune of Nature</span></li></li>
+                      </ul>
+                  </p>
+                  <p>
+                    
+                    <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Thrown</span><span class="orange">, Return to the Trainer for your next assignment.</span>
+                  </p>
+                  <p>
+                    <span class="light-red">Nature Mage Trainer</span> will welcome you back and for accomplishing the task at hand. He gives you a reward for your efforts.
+                    You have received all the trainging he has to offer. 
+                  <br>
+                  You have completed your training in Nature Magic.
+                  </p>
+                  <p class="mt-4 py-3 text-center quest-complete">
+                  Quest Complete
+                </p>
+                </div>
+              </div>
+            </div>
+            <!-- End of Nature Mage Trainer  -->
 
               <div class="line"></div>
             <!-- Start of Cooking Trainer  -->
